# guilible

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: basic.py  lines_test.py  moving_boxes.py  stress_test.py
src/: construct.rs  construction.rs  event.rs  lib.rs  main.rs  quad.rs  quad_shader.wgsl  render.rs  renderer.rs  shader.wgsl  transfer.rs  ui.rs  utils.rs  window.rs
src/guilible/: __init__.py  window.py
src/guilible/ui/: base.py  rectangle.py
tests/: test_window.py
