[package]
edition = "2021"
name = "guilible"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "guilible"

[dependencies]
bytemuck = "1.7.0"
once_cell = "1.20.3"
online-statistics = "0.2.6"
pollster = "0.4.0"
pyo3 = "0.23.3"
rayon = "1.10.0"
wgpu = "24.0.1"
winit = "0.30.9"
