[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 127

[project]
description = ""
dynamic = ["dependencies"]
license = {file = "LICENSE"}
name = "guilible"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
version = "0.1.0"

[project.optional-dependencies]
testing = ["pytest"]
